# glacis-assignment

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: config.py  db.py  main.py
app/api/: webhooks.py
app/domain/: schemas.py
app/llm/: agent.py
app/repositories/: jobs.py  normalized_records.py  raw_events.py
app/services/: idempotency.py  normalizer.py
app/workers/: ingest_worker.py  normalization_worker.py  worker_loop.py
docs/: ARCHITECTURE.md
migrations/: 001_initial_schema.sql
tests/: test_idempotency.py  test_ingest_worker.py  test_jobs.py  test_normalization.py  test_webhooks.py
