[project]
name = "glacis-assignment"
version = "0.1.0"
description = "Minimal AI webhook ingestion service scaffold."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asyncpg>=0.30.0",
    "fastapi>=0.115.0",
    "pydantic-ai-slim[groq]>=1.26.0",
    "uvicorn[standard]>=0.30.0",
]
